# thusa-axsqpg-template

./: .env.example  Cargo.toml  README.md  ratelimittest.js
logs/: log.2024-03-20  log.2024-03-21
migrations/: .template.down  .template.up  0001_initial_migration.up.sql
src/: config.rs  main.rs  router.rs
src/authentication/: jwt.rs  mod.rs  roles.rs
src/data/models/: user.rs
src/documentation/: api_documentation.rs  api_security_addon.rs  mod.rs
src/routes/: fallback.rs  index.rs  mod.rs
src/routes/authentication/: check.rs  login.rs
src/routes/customers/: add.rs  mod.rs  view.rs
