[package]
name = "managed-reports-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.3", features = ["json", "multipart"] }
axum_typed_multipart = "0.11.0"
bcrypt = "0.15.0"
bigdecimal = { version = "0.3.0", features = ["serde"] }
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
cron = "0.12.0"
csv = "1.3.0"
dotenv = "0.15.0"
fuzzy-matcher = "0.3.7"
jsonwebtoken = "9.2.0"
libmath = "0.2.1"
md5 = "0.7.0"
rand = "0.8.5"
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "chrono",
    "macros",
    "json",
    "uuid",
    "bigdecimal",
] }
tempfile = "3.10.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-cron-scheduler = "0.10.0"
tokio-util = { version = "0.7.10", features = ["full"] }
totp-rs = { version = "5.5.1", features = ["qr", "rand", "serde"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = [
    "add-extension",
    "trace",
    "cors",
] }
tower_governor = { version = "0.3.2", features = ["axum", "tracing"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
