[package]
name = "thusa-axsqpg-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.3", features = ["json"] }
bigdecimal = { version = "0.4.2", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
cron = "0.12.0"
dotenv = "0.15.0"
libmath = "0.2.1"
md5 = "0.7.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "any", "postgres", "chrono", "macros", "json", "uuid", "bigdecimal"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-cron-scheduler = "0.9.4"
tokio-util = { version = "0.7.10", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["add-extension", "trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["axum"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
